set(BLUEPRINT_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/blueprint/src)
set(BLUEPRINT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/blueprint/include)
set(BLUEPRINT_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/blueprint/test)
set(BLUEPRINT_BINDING_DIR ${CMAKE_CURRENT_SOURCE_DIR}/blueprint/binding)

# Adding subdirectories
# -------------------------------------------------

add_subdirectory(blueprint)

